--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -31,6 +31,7 @@
             <div class="humidity">Humidity: 60%</div>
             <div class="wind">Wind speed: 6.2 km/h</div>
         </div>
+        <div id="forecast"></div>
     </div>
 </body>
 </html>
