--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -17,6 +17,7 @@
         <div class="search">
             <input type="text" class="search-bar" placeholder="Search">
             <button class="searchBtn"><i class="fas fa-search search-icon"></i></button>
+            <div id="suggestions" class="suggestions"></div>
         </div>
         <div class="weather loading">
             <h1 class="city">Weather in Almaty</h1>
