--- a/MovieApp/index.html
+++ b/MovieApp/index.html
@@ -41,16 +41,10 @@
 
             <div class="overview">
                 <h3>Overview: </h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Illo, amet? Tenetur mollitia porro reiciendis similique eos explicabo
-                doloribus accusantium minima, nobis quo atque culpa aspernatur 
-                illum aut, corporis corrupti fugiat.
+                <p>Runtime: </p>
+                <p>Cast: </p>
             </div>
         </div>
     </main>
-    <section id="watchlist" class="hidden">
-        <h2>My Watchlist</h2>
-        <div id="watchlist-movies"></div>
-    </section>
 </body>
 </html>
