--- a/RecipeApp/index.html
+++ b/RecipeApp/index.html
@@ -16,9 +16,9 @@
 <body>
     <div class="recipe">
         <div class="container">
-            <h1>Recipe FInder</h1>
+            <h1>Recipe FInder <img src="./img/icons8-лист-48.png" alt=""></h1>
             <div id="search-form">
-                <input type="text" id="query" oninput="fetchSuggestions()" placeholder="Search for recipes...">
+                <input type="text" id="query" oninput="fetchSuggestions()" placeholder="Type any ingredient ">
                 <button id="search-button" onclick="searchRecipes()">Search</button>
             </div>
             <div id="suggestions-container"></div>
